; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/d3dx9_36/extr_shader.c_instr_def.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/d3dx9_36/extr_shader.c_instr_def.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.instr_info = type { i32 }

@.str = private unnamed_addr constant [29 x i8] c"    def c%d, %g, %g, %g, %g\0A\00", align 1
@D3DSP_REGNUM_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.instr_info*, i32**, i8*, i32)* @instr_def to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @instr_def(%struct.instr_info* %0, i32** %1, i8* %2, i32 %3) #0 {
  %5 = alloca %struct.instr_info*, align 8
  %6 = alloca i32**, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.instr_info* %0, %struct.instr_info** %5, align 8
  store i32** %1, i32*** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %10 = load i8*, i8** %7, align 8
  %11 = load i32**, i32*** %6, align 8
  %12 = load i32*, i32** %11, align 8
  %13 = getelementptr inbounds i32, i32* %12, i64 1
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @D3DSP_REGNUM_MASK, align 4
  %16 = and i32 %14, %15
  %17 = load i32**, i32*** %6, align 8
  %18 = load i32*, i32** %17, align 8
  %19 = getelementptr inbounds i32, i32* %18, i64 2
  %20 = bitcast i32* %19 to float*
  %21 = load float, float* %20, align 4
  %22 = fpext float %21 to double
  %23 = load i32**, i32*** %6, align 8
  %24 = load i32*, i32** %23, align 8
  %25 = getelementptr inbounds i32, i32* %24, i64 3
  %26 = bitcast i32* %25 to float*
  %27 = load float, float* %26, align 4
  %28 = fpext float %27 to double
  %29 = load i32**, i32*** %6, align 8
  %30 = load i32*, i32** %29, align 8
  %31 = getelementptr inbounds i32, i32* %30, i64 4
  %32 = bitcast i32* %31 to float*
  %33 = load float, float* %32, align 4
  %34 = fpext float %33 to double
  %35 = load i32**, i32*** %6, align 8
  %36 = load i32*, i32** %35, align 8
  %37 = getelementptr inbounds i32, i32* %36, i64 5
  %38 = bitcast i32* %37 to float*
  %39 = load float, float* %38, align 4
  %40 = fpext float %39 to double
  %41 = call i32 @sprintf(i8* %10, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i32 %16, double %22, double %28, double %34, double %40)
  store i32 %41, i32* %9, align 4
  %42 = load i32**, i32*** %6, align 8
  %43 = load i32*, i32** %42, align 8
  %44 = getelementptr inbounds i32, i32* %43, i64 6
  store i32* %44, i32** %42, align 8
  %45 = load i32, i32* %9, align 4
  ret i32 %45
}

declare dso_local i32 @sprintf(i8*, i8*, i32, double, double, double, double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
